# Authy

./: Cargo.toml  data.db
migrations/: 20230624221456_initial.sql
src/: lib.rs
src/data/: mod.rs  model.rs  query.rs
src/domain/user/: mod.rs
src/domain/user/field/: email.rs  mod.rs  name.rs  password.rs
src/service/: action.rs  ask.rs  mod.rs
src/web/: api.rs  mod.rs
