[package]
name = "authy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
derive_more = "0.99.17"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets"] }
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "macros"]}
structopt = "0.3.26"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = "1.28.2"
